--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,7 +10,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/flag"
+        android:id="@+id/img_product"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
@@ -31,12 +31,12 @@
         android:textSize="25sp"
         android:textColor="#040B14"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/flag"
+        app:layout_constraintLeft_toRightOf="@+id/img_product"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/capital"
+        android:id="@+id/description_product"
 
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -44,56 +44,57 @@
         android:text="Jode Electronics"
         android:layout_marginTop="7dp"
         android:textColor="@color/gray"
+        android:maxLines="1"
+        android:maxLength="12"
         android:textSize="15dp"
-        app:layout_constraintLeft_toRightOf="@+id/flag"
+        app:layout_constraintLeft_toRightOf="@+id/img_product"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$850.00"
+        android:text="@string/_850_00"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_marginTop="7dp"
         android:textColor="@color/orange"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
 
-        app:layout_constraintStart_toEndOf="@+id/flag"
-        app:layout_constraintTop_toBottomOf="@+id/capital" />
+        app:layout_constraintStart_toEndOf="@+id/img_product"
+        app:layout_constraintTop_toBottomOf="@+id/description_product" />
 
     <ImageView
         android:id="@+id/imageView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:background="@drawable/tochka"
-        app:layout_constraintBottom_toBottomOf="@+id/capital"
-        app:layout_constraintStart_toEndOf="@+id/capital"
-        app:layout_constraintTop_toTopOf="@+id/capital" />
+        app:layout_constraintBottom_toBottomOf="@+id/description_product"
+        app:layout_constraintStart_toEndOf="@+id/description_product"
+        app:layout_constraintTop_toTopOf="@+id/description_product" />
 
     <TextView
 
-        android:id="@+id/textView"
+        android:id="@+id/rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:text="4.6"
+        android:layout_marginStart="15dp"
+        android:text="@string/_4_6"
+        android:maxLength="3"
         android:textColor="@color/gray"
-
-
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/capital"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="@+id/description_product"
         app:layout_constraintStart_toEndOf="@+id/imageView16"
-        app:layout_constraintTop_toTopOf="@+id/capital" />
+        app:layout_constraintTop_toTopOf="@+id/description_product" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/rate"
-        android:layout_marginLeft="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rating"
+        app:layout_constraintStart_toEndOf="@+id/rating"
+        app:layout_constraintTop_toTopOf="@+id/rating" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
